notizia_gen/tests/compile_fail/missing_message_param.stderr
error: Expected 'message' parameter.
       Use: #[task(message = YourMessageType)]
 --> tests/compile_fail/missing_message_param.rs:8:8
  |
8 | #[task(msg = Message)]
  |        ^^^
